<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Branco"
    tools:context=".activity.ExecutionActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/logo_image_view"
        app:layout_constraintStart_toStartOf="@+id/logo_image_view"
        app:layout_constraintTop_toTopOf="@+id/logo_image_view"
        app:srcCompat="?android:attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/card_execucao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_horizontal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_execucao"
        android:layout_width="0dp"
        android:layout_height="556dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Branco_1">

            <TextView
                android:id="@+id/titulo_execucao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/execucao"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/texto_modulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/modulo"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_execucao" />

            <EditText
                android:id="@+id/texto_descricao"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_modulo" />

            <TextView
                android:id="@+id/texto_tipo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="@string/tipo"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/texto_localizado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_descricao" />

            <TextView
                android:id="@+id/texto_localizado"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/localizado"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/texto_tipo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/texto_tipo"
                app:layout_constraintTop_toTopOf="@+id/texto_tipo" />

            <TextView
                android:id="@+id/num_duracao"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="@string/duracao"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/num_repeticao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_tipo" />


            <TextView
                android:id="@+id/num_repeticao"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/repeticao"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/num_duracao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/num_duracao"
                app:layout_constraintTop_toTopOf="@+id/num_duracao" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:layout_marginTop="96dp"
                android:progress="20"
                android:progressTint="#4CAF50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num_duracao" />

            <Button
                android:id="@+id/botao_execucao"
                android:layout_width="153dp"
                android:layout_height="53dp"
                android:layout_marginBottom="8dp"
                android:background="#E0620D"
                android:text="Próximo"
                android:textColor="@color/Branco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintVertical_bias="0.84000003" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
